# actg-contacts

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .yapfignore  Dockerfile  LICENCE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: basic.yml
scripts/: __main__.py
src/: config.py  contact_service.py  db.py  ldap_service.py  main.py  utils.py
src/component/: db.py  image.py  ldap.py
src/controller/: contact_controller.py  ldap_controller.py
src/resource/: dev.json  prod.json
tests/: .coverage  test_sample.py
