[tool.poetry]
name = "actg-contacts"
version = "0.1.0"
description = ""
authors = ["BOSHAU CHEN <b97390022@gmail.com>"]
readme = "README.md"
packages = [{include = "actg_contacts"}]

[tool.poetry.dependencies]
python = "^3.11"
ldap3 = "^2.9.1"
loguru = "^0.7.0"
discord-py-interactions = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
